--- a/shadow-cljs/Dockerfile
+++ b/shadow-cljs/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:11.0-jdk-slim
 
 RUN apt-get update
-RUN apt-get install -y openssh-client
+RUN apt-get install -y openssh-client git
 RUN apt-get install -y curl \
   && curl -sL https://deb.nodesource.com/setup_8.x | bash - \
   && apt-get install -y nodejs \
